# bitgraph

./: Cargo.toml  README.md
.git-hooks/: pre-commit
src/: ffmpeg.rs  history.rs  main.rs  serde.rs  serde_ext.rs
src/app/: about_window.rs  bitrate.rs  mod.rs
