[package]
name = "bitgraph"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
anyhow = "1.0.68"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.91"
indoc = "1.0.8"
tracing-subscriber = "0.3"
rfd = "0.10.0"
parking_lot = "0.12.1"
lazy_static = "1.4.0"
dirs = "4.0.0"
egui = "0.20.0"
eframe = { version = "0.20.0", default-features = false, features = [
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "wgpu".
  "dark-light",    # Auto-detect dark/light theme perference
] }
