[package]
name = "bitgraph"
version = "0.1.0"
edition = "2021"
resolver = "2"
description = "BitGraph is a media bitrate analyzer based on FFprobe, written in Rust, with cross-platform support."

[dependencies]
anyhow = "1.0.68"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.91"
indoc = "1.0.8"
tracing-subscriber = "0.3"
rfd = "0.10.0"
parking_lot = "0.12.1"
lazy_static = "1.4.0"
dirs = "4.0.0"
egui = "0.20.1"
eframe = { version = "0.20.1", default-features = false, features = [
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "wgpu".
  "dark-light",    # Auto-detect dark/light theme perference
] }

[package.metadata.bundle]
identifier = "moe.sdl.bitgraph"
